# ECON4130_Term_Paper

./: Scraping.ipynb  main.py  pyproject.toml
Data/: horse_training_data.xlsx
